# Open5GS-Core-DPDK-Accelerated-UPF

./: BUILD_AND_DEPLOYMENT.md  Open5GS-Core-DPDK-Accelerated-UPF.md  README.md
Open5GS-Core-DPDK-Accelerated-UPF/: CMakeLists.txt  Dockerfile
Open5GS-Core-DPDK-Accelerated-UPF/.github/workflows/: ci.yml
Open5GS-Core-DPDK-Accelerated-UPF/build_ci/: CMakeCache.txt  Makefile  cmake_install.cmake  smf  upf
Open5GS-Core-DPDK-Accelerated-UPF/configs/: smf.yaml  upf.yaml
Open5GS-Core-DPDK-Accelerated-UPF/docs/: ARCHITECTURE.md  BUILD_AND_DEPLOYMENT.md
Open5GS-Core-DPDK-Accelerated-UPF/scripts/: netns_demo.sh  run_demo.sh
Open5GS-Core-DPDK-Accelerated-UPF/src/common/: config.c  config.h  log.c  log.h  net.c  net.h  ringbuf.c  ringbuf.h  timeutil.c  timeutil.h
Open5GS-Core-DPDK-Accelerated-UPF/src/pfcp/: pfcp.c  pfcp.h  pfcp_codec.c  pfcp_rules.c  pfcp_rules.h
Open5GS-Core-DPDK-Accelerated-UPF/src/smf/: smf.c  smf.h  smf_main.c  smf_metrics.c  smf_ngap_stub.c  smf_pfcp_cli.c  smf_pfcp_cli.h  smf_sessions.c  smf_sessions.h
Open5GS-Core-DPDK-Accelerated-UPF/src/upf/: session_table.c  session_table.h  upf.h  upf_dataplane.c  upf_dataplane.h  upf_gtpu.c  upf_gtpu.h  upf_main.c  upf_metrics.c  upf_n6.c  upf_n6.h  upf_pfcp_srv.c  upf_pfcp_srv.h
